--- a/htmlCssJs/css/stilo.css
+++ b/htmlCssJs/css/stilo.css
@@ -1,8 +1,42 @@
-h1,h6{
-	color:red;
+*{
+	margin:0;
+	padding:0;
+	box-sizing:border-box;
+}
+
+h1{
+	color:white;
 }
 
 /*Ataque h1 que estão dentro da class div, no caso filhas dessa classe */
-.div > h1{
+div.div > h1{
 	color:blue;
+}
+
+div.menu{
+	width:100%;
+	height:300px;
+	background-color:#069;
+	text-align:center;	
+	position:fixed;
+
+}
+
+div.menu a{
+	font-size:1em;
+	text-decoration:none;
+	color:white;
+	margin:0 30px 0 0;
+	
+}
+
+div.flogin{
+	
+	align:center;
+	height:200%;
+	width:40%;
+	text-align:center;
+	margin:0 auto;
+	margin-top:40px;
+			height:200%
 }
